solc_mutator_ossfuzz_seed_corpus/test_sol/test_133b5fd938809d3a689874f5d06aa9144373ee45737db987608aaeb91fd15184_ba4748477f5713e9f744f26fbaf5a05134acaf7e_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
bytes25 constant cons0 = bytes25(0x00000000000000000000000000000000000000000000000000);
type T0 is int72;
library L0 {
  int8 public constant cons1 = ((((~(((int8(0) ** uint24(uint24(10576843))) ^ int8(0)))) ^ int8(127)) & int8(-111)) ^ int8(89));
  function f0() external   
  {
  }
  function f1(address payable i0,bytes memory i1) external    returns(int168 o0)
  {
  }
  bytes32 public constant cons2 = ((!((uint152(((uint152((uint152(2554386803051502311691493572514811863807795008) / uint152(0))) | uint152(5708990770823839524233143877797980545530986495)) / uint152(1203259470829358970919284492017823405932888759))) < uint152(5708990770823839524233143877797980545530986495)))) ? bytes32(0x6fa72446083c0c47035ba15d04089c9168d4a53ef7cec29a4515509506833710) : bytes32(0x0000000000000000000000000000000000000000000000000000000000000000));
  modifier m0(int208 i0) 
  {
    require((!(false)), "79d3cf4bf57167c4103cfa8abd4b153ae1dda7341f86c7615271afa46af8fae017bb706f866e");
    if (true)
    {
      assembly
      {
        let al0 := 0
      }
      _;
    }
    else if (true)
    {
      for(      bool l0 = true;
true;
address(0x0000000000000000000000000000000000000008))
      {
        break;
      }
      _;
      bytes[1] memory l1 = ["ffffffffffffffffffffffffffffffffffffffffffffffffffffff"];
    }
  }
  type T1 is uint256;
  error er0();
  enum EN0 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13
  }
}
using L0 for uint;
// ----
// Warning 3149: (su0.sol:184-219): The result type of the exponentiation operation is equal to the type of the first operand (int8) ignoring the (larger) type of the second operand (uint24) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// TypeError 9574: (su0.sol:1250-1329): Type string memory[1] memory is not implicitly convertible to expected type bytes memory[1] memory.
